Fix md-open-menu-container z-index

--- a/frontend/src/App/app.scss
+++ b/frontend/src/App/app.scss
@@ -100,6 +100,10 @@ md-backdrop {
   z-index: 10000;
 }
 
+.md-open-menu-container {
+  z-index: 3000;
+}
+
 .md-fab-not-raised {
   box-shadow: none !important;
 }
